...
        self.deleteButton.layer.cornerRadius = Style.deleteButtonCornerRadius
    }

    //  Setup Accessibility identifier
    private func setupAccessibility() {
        self.view.isAccessibilityElement = false
        self.view.accessibilityIdentifier = "TaskDetail"

        self.isDoneSwitch.accessibilityIdentifier = "isDone"
        self.isDoneSwitch.isAccessibilityElement = false

        self.deleteButton.accessibilityIdentifier = "Delete Detail"
        self.deleteButton.isAccessibilityElement = false
    }

...
