...
        self.view.addSubview(self.collectionView)
        self.view.addSubview(self.spiner)
    }

    private func setupAccessibility() {
        self.view.isAccessibilityElement = false
        self.view.accessibilityIdentifier = "TaskList"
        self.collectionView.isAccessibilityElement = false
        self.collectionView.accessibilityIdentifier = "TaskListCollection"
    }

    /// Bind some action to Observable property, set the delegate,
    /// And launch the loading process on the viewModel
    private func setupViewModel() {

...
